--- a/about.html
+++ b/about.html
@@ -315,16 +315,16 @@
           <h6 class="mgb-1rem">الوقت الذي إستغرقته للتعلم بالشهور</h6>
           <table class="full-width">
             <tr class="full-width" style="font-family: 'Poppins',sans-serif;">
-              <td style="color: #131313; border: 1px solid #dadce0;" class="pdx-15 pdy-15 text-center fw-500">html</td>
-              <td style="color: #131313; border: 1px solid #dadce0;" class="pdx-15 pdy-15 text-center fw-500">css</td>
-              <td style="color: #131313; border: 1px solid #dadce0;" class="pdx-15 pdy-15 text-center fw-500">javascript</td>
-              <td style="color: #131313; border: 1px solid #dadce0;" class="pdx-15 pdy-15 text-center fw-500">total</td>
+              <td style="color: #131313; border: 1px solid #dadce0;" class="pdx-5 pdy-15 text-center fw-500">html</td>
+              <td style="color: #131313; border: 1px solid #dadce0;" class="pdx-5 pdy-15 text-center fw-500">css</td>
+              <td style="color: #131313; border: 1px solid #dadce0;" class="pdx-5 pdy-15 text-center fw-500">JS</td>
+              <td style="color: #131313; border: 1px solid #dadce0;" class="pdx-5 pdy-15 text-center fw-500">total</td>
             </tr>
             <tr dir="ltr">
-              <td style="color: #0f8cfa; border: 1px solid #dadce0;" class="pdx-15 pdy-15 text-center fw-500">1</td>
-              <td style="color: #0f8cfa; border: 1px solid #dadce0;" class="pdx-15 pdy-15 text-center fw-500">7</td>
-              <td style="color: #0f8cfa; border: 1px solid #dadce0;" class="pdx-15 pdy-15 text-center fw-500">3</td>
-              <td style="color: #0f8cfa; border: 1px solid #dadce0;" class="pdx-15 pdy-15 text-center fw-500">11</td>
+              <td style="color: #0f8cfa; border: 1px solid #dadce0;" class="pdx-5 pdy-15 text-center fw-500">1</td>
+              <td style="color: #0f8cfa; border: 1px solid #dadce0;" class="pdx-5 pdy-15 text-center fw-500">7</td>
+              <td style="color: #0f8cfa; border: 1px solid #dadce0;" class="pdx-5 pdy-15 text-center fw-500">3</td>
+              <td style="color: #0f8cfa; border: 1px solid #dadce0;" class="pdx-5 pdy-15 text-center fw-500">11</td>
             </tr>
           </table>
         </div>
